--- a/Projetos/Bin2Dec/style.css
+++ b/Projetos/Bin2Dec/style.css
@@ -1,67 +1,55 @@
  @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
+
+*{
+    text-align: center;
+}
+
 body{
-    font: 400 14px Roboto, sans-serif;
+    font: 400 18px Roboto, sans-serif;
     background-color: rgba(121, 65, 177, 0.3) ;
     
-    
+}
+
+#container{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    background-color: #9c54a5;
+    height: 100%;
+}
+
+form {
+    justify-content: center;
+    width: 80%;
+    margin:0 auto 10px;
+    align-items: center;
+    align-content: center;
 }
 
 input, button, textarea{
     font: 400 18px Roboto, sans-serif;
 }
 
-.formNum {
-   display: flex;
-   flex-wrap: wrap;
-   justify-content: center;
-   width: 80%;
-    margin: auto;
-    margin-top: 200px;
-   align-items: center;
-   align-content: center;
-   
-  
-}
-.descript{
-    text-align: center;
-    width: 20%;
-    font-size: 20px;
-    
-    
-    
-}
-.bin {
-    width: 100px;
-    margin: 10px;
-    text-align: center;
-    line-height: 75px;
+
+h1{
     font-size: 30px;
-
+    color: rgb(21, 9, 97);
 }
 
-
-
-.break {
-    flex-basis: 100%;
-    height: 0;
-  }
-
-  .button{
-    flex-grow: 6;
+button{
     background-color: rgba(121, 65, 177); /* Green */
     border: none;
     color: white;
-    padding: 15px 32px;
+    padding: 10px;
+    margin: 4px 2px;
     text-align: center;
+    cursor: pointer;
     text-decoration: none;
     font-size: 16px;
     
   }
 
-  i{
-      padding-right: 20px;
-      padding-right: 20px;
-  }
-
-  
+p{
+    font-size: 20px;
+}
